Fix anchor links alignment

--- a/src/App.scss
+++ b/src/App.scss
@@ -73,22 +73,22 @@ html {
                         text-decoration: none;
                         color: var(--grey);
                         width: auto;
-                        padding-left: 12%;
+                        padding-left: 30px;
                         transition: .2s ease-in-out;
                         &::after {
                             content: "";
                             background-color: var(--green);
                             position: absolute;
                             left: 2px;
-                            margin-left: 20%;
+                            margin-left: 100px;
                             margin-top: 0;
-                            width: 1%;
+                            width: 2px;
                             height: 23px;
                             transition: .2s ease-in-out;
                         }
                         &:hover::after {
                             margin-top: 10px;
-                            width: 12%;
+                            width: 60px;
                             height: 2px;
                         }
                     }
@@ -100,11 +100,10 @@ html {
                                 font-weight: 700;
                                 opacity: 1;
                                 color: var(--green);
-                                padding-left: 22%;
+                                padding-left: 80px;
                             }
                         }
                     }
-    
                 }
                 .soc-list {
                     display: flex;
@@ -232,6 +231,12 @@ html {
                     width: 100%;
                     height: 100%;
                     position: relative;
+                    a {
+                        &::after {
+                            left: 2px;
+                            margin-left: 50px !important;
+                        }
+                    }
                 }
                 .infoColumn {
                     padding: 50px;
